--- a/Endjin.CucumberJs.TestAdapter/packages.config
+++ b/Endjin.CucumberJs.TestAdapter/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Gherkin" version="3.1.2" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
-  <package id="StyleCop.Analyzers" version="1.0.0-beta013" targetFramework="net46" developmentDependency="true" />
+  <package id="Gherkin" version="3.2.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
 </packages>
